Remove download button's margin-right to fix broken style

--- a/contents/assets/stylesheets/styles.scss
+++ b/contents/assets/stylesheets/styles.scss
@@ -46,7 +46,6 @@ nav {
 }
 
 h1, h2, h3 {
-
 	line-height: 1.5em;
 }
 
@@ -124,7 +123,6 @@ img.screenshot {
 	}
 
 	line-height: 4em;
-	margin-left: 10px;
 }
 
 .download-top {
